Header do caca palavras

--- a/codigo/public/caca-palavras.html
+++ b/codigo/public/caca-palavras.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
 </header>
-
+<div class="header-spacer"></div>
     <main>
         <section class="lista-palavras">
             <h1 class="listTitle">Palavras</h1>
