--- a/codigo/public/quiz.html
+++ b/codigo/public/quiz.html
@@ -25,6 +25,7 @@
     </ul>
   </nav>
 </header>
+<div class="header-spacer"></div>
 
   <div class="container"></div>
   <script src="assets/js/quiz.js"></script>
