Texto idiota do fabio

--- a/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
+++ b/codigo/public/modulos/secaodetuturial/AbaTutoriais.html
@@ -29,6 +29,10 @@
 </header>
     <main class="cards-container" id="cardsContainer">
      <h1>Tutoriais</h1>
+   <div class="sobre-texto">
+          <p>
+  O projeto <strong>Envelhecer Digital</strong> oferece uma série de tutoriais simples e acessíveis, especialmente desenvolvidos para pessoas idosas. Nosso objetivo é facilitar o aprendizado das tecnologias do dia a dia, com vídeos, materiais em PDF e jogos educativos, para que você possa usar seus dispositivos com segurança, confiança e autonomia. Queremos tornar o mundo digital um lugar mais amigável, inclusivo e divertido para todos!
+</p>
     </main>
     <div id="videoModal" class="modal">
         <div class="modal-content">
