Correção do header na página de conquistas

--- a/codigo/public/conquistas.html
+++ b/codigo/public/conquistas.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Suas Conquistas</title>
+  <link rel="stylesheet" href="assets/css/carrosel.css">
   <link rel="stylesheet" href="assets/css/conquistas.css">
-<link rel="stylesheet" href="assets/css/carrosel.css"></head>
+</head>
 <body>
   <header>
   <nav class="menu">
