Correção do header no jogo da memória

--- a/codigo/public/jogodamemoria.html
+++ b/codigo/public/jogodamemoria.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Memória Digital</title>
-  <link rel="stylesheet" href="assets/css/jogodamemoria.css" />
   <link rel="stylesheet" href="assets/css/carrosel.css" />
+  <link rel="stylesheet" href="assets/css/jogodamemoria.css" />
 </head>
 <body>
   <header>
@@ -24,6 +24,8 @@
     </ul>
   </nav>
 </header>
+<main>
+
   <div class="main-wrapper">
     <!-- Tabela Completa à esquerda -->
     <div class="tabela-wrapper">
@@ -69,6 +71,7 @@
   <audio id="error-sound" src="modulos/jogo da memoria/jogo da memoria/public/sounds/erro.mp3"></audio>
   <audio id="background-music" src="modulos/jogo da memoria/jogo da memoria/public/sounds/musica-fundo.mp3" loop></audio>
   <button id="toggle-music">🔈 Música</button>
+</main>
   <script src="assets/js/jogodamemoria.js"></script>
 </body>
 </html>
