--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -2,32 +2,39 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/login.css" />
 </head>
 <body>
-  <div class="login-card">
-    <h2>Acesse sua conta<br>com facilidade</h2>
-    <img src="./assets/images/ChatGPT Image 22 de jun. de 2025, 21_02_49.png" alt="Pessoa com tablet" class="illustration">
 
-    <form id="login-form" class="form" method="post">
-      <div class="form-group">
-        <input type="text" name="username" id="username" class="form-control" placeholder="Email ou nome de usuário">
+  <!-- Header com frase de impacto -->
+  <header class="site-header text-center py-4 bg-light">
+    <h1>Bem-vindo ao Envelhecer Digital</h1>
+    <p>Promovendo a inclusão digital para uma geração mais conectada 🌐✨</p>
+  </header>
+
+  <div class="login-card container mt-5 p-4 bg-white rounded shadow" style="max-width: 400px;">
+    <h2 class="mb-4 text-center">Acesse sua conta<br>com facilidade</h2>
+    <img src="./assets/images/ChatGPT Image 22 de jun. de 2025, 21_02_49.png" alt="Pessoa com tablet" class="illustration mx-auto d-block mb-4" style="max-width:120px; border-radius:10px;" />
+
+    <form id="login-form" method="post" autocomplete="off">
+      <div class="mb-3">
+        <input type="text" name="username" id="username" class="form-control" placeholder="Email ou nome de usuário" required />
       </div>
-      <div class="form-group password-wrapper">
-        <input type="password" name="password" id="password" class="form-control" placeholder="Senha">
-        <span class="toggle-password" onclick="togglePassword()">Mostrar</span>
+      <div class="mb-3 position-relative password-wrapper">
+        <input type="password" name="password" id="password" class="form-control" placeholder="Senha" required />
+        <span class="toggle-password" style="position:absolute; right:12px; top:50%; transform: translateY(-50%); cursor:pointer; user-select:none; color:#555;" onclick="togglePassword()">Mostrar</span>
       </div>
-      <input type="submit" name="submit" class="btn btn-primary" value="Entrar">
+      <input type="submit" class="btn btn-primary w-100" value="Entrar" />
     </form>
 
-    <div class="text-link">
+    <div class="text-link mt-3 text-center">
       <a href="#">Esqueceu a senha?</a>
     </div>
-    <div class="text-link">
-      <a href="#" id="openModalBtn">+ Criar conta</a>
+    <div class="text-link mt-1 text-center">
+      <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">+ Criar conta</a>
     </div>
   </div>
 
@@ -36,26 +43,25 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Login App</h5>
+          <h5 class="modal-title" id="loginModalLabel">Novo usuário</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
         </div>
         <div class="modal-body">
-          <form id="new-user-form">
-            <h3 class="text-center text-info">Novo usuário</h3>
-            <div class="form-group">
-              <input type="text" name="txt_login" id="txt_login" class="form-control" placeholder="Usuário">
+          <form id="new-user-form" autocomplete="off">
+            <div class="mb-3">
+              <input type="text" name="txt_login" id="txt_login" class="form-control" placeholder="Usuário" required />
             </div>
-            <div class="form-group">
-              <input type="text" name="txt_nome" id="txt_nome" class="form-control" placeholder="Nome completo">
+            <div class="mb-3">
+              <input type="text" name="txt_nome" id="txt_nome" class="form-control" placeholder="Nome completo" required />
             </div>
-            <div class="form-group">
-              <input type="email" name="txt_email" id="txt_email" class="form-control" placeholder="Email">
+            <div class="mb-3">
+              <input type="email" name="txt_email" id="txt_email" class="form-control" placeholder="Email" required />
             </div>
-            <div class="form-group">
-              <input type="password" name="txt_senha" id="txt_senha" class="form-control" placeholder="Senha">
+            <div class="mb-3">
+              <input type="password" name="txt_senha" id="txt_senha" class="form-control" placeholder="Senha" required />
             </div>
-            <div class="form-group">
-              <input type="password" name="txt_senha2" id="txt_senha2" class="form-control" placeholder="Confirme a senha">
+            <div class="mb-3">
+              <input type="password" name="txt_senha2" id="txt_senha2" class="form-control" placeholder="Confirme a senha" required />
             </div>
           </form>
         </div>
