Ajuste dos footers na respnsividade

--- a/codigo/public/caca-palavras.html
+++ b/codigo/public/caca-palavras.html
@@ -63,7 +63,10 @@
         </section>
     </main>
 
-   <footer style="margin-top: 30px;" class="footer">
+   <footer style="margin-top: 40px;  @media screen and (max-width: 768px) {
+      margin-top: 150px;
+    
+   }" class="footer">
       <div class="footer-content">
         <div class="footer-left">
           <img src="assets/images/logoenvelhecer.jpg" alt="Logo Envelhecer Digital" class="logo-footer" />
