--- a/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
+++ b/codigo/public/modulos/aba-gerenciarsenhas/gerenciarsehas.html
@@ -6,8 +6,15 @@
   <title>Gerenciador de Senhas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="../../assets/css/footer.css">
+  <link rel="stylesheet" href="../../assets/css/gerenciar-senhas.css" />
+  <link rel="stylesheet" href="../../assets/css/header.css" />
+  <link rel="stylesheet" href="../../assets/css/modal.css" />
+  
+
 <link rel="stylesheet" href="../../assets/css/carrosel.css"></head>
+<link rel="stylesheet" href="../../assets/css/footer.css" />
+
+
 <body>
   <header>
   <nav class="menu">
@@ -26,7 +33,8 @@
     </ul>
   </nav>
 </header>
-<div style="height: 130px;"></div>
+
+<div  style="height: 130px;  margin-bottom: 200px;"></div>
   <div class="password-container">
     <header class="header-container">
       <h1>Gerenciar Senhas</h1>
@@ -60,10 +68,10 @@
     </div>
   </div>
 
- <footer  style="margin-top: 480px;"    class="footer">
+ <footer  style="margin-top: 500px;"    class="footer">
       <div class="footer-content">
         <div class="footer-left">
-      ,<img src="../../modulos/secaodetuturial/imagens/Logo-Site.jpg" alt="">
+      ,<img  class="logo-footer "        src="../../modulos/secaodetuturial/imagens/Logo-Site.jpg" alt="">
         </div>
 
         <div class="footer-middle">
