--- a/codigo/public/quiz.html
+++ b/codigo/public/quiz.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
-  <header>
+  <div>
   <nav class="menu">
     <h1>Envelhecer Digital</h1>
     <div class="menu-toggle" id="menu-toggle">
@@ -25,12 +25,12 @@
       <li><button id="btnLogout" class="btn btn-danger">Sair</button></li>
     </ul>
   </nav>
-</header>
+</div>
 <div class="header-spacer"></div>
 
   <div class="container"></div>
 
-   <footer  style="margin-top: 190px;"  class="footer">
+   <footer  style="margin-top: 650px;"  class="footer">
       <div class="footer-content">
         <div class="footer-left">
           <img src="assets/images/logoenvelhecer.jpg" alt="Logo Envelhecer Digital" class="logo-footer" />
